--- a/src/html/partials/card-review.html
+++ b/src/html/partials/card-review.html
@@ -12,7 +12,7 @@
                 <div class="fs-small text-black-60 lh-sm">@@job</div>
             </div>
             <div>
-                <a href="#" class="btn btn-outline-black btn-l btn-animated">
+                <a href="@@reviewURL" class="btn btn-outline-black btn-l btn-animated" data-fancybox="review-gallery">
                     <div class="animated-content">
                         <div class="animated-content__default">
                             <span>Читать</span>
