--- a/src/html/partials/card-service.html
+++ b/src/html/partials/card-service.html
@@ -1,7 +1,9 @@
 <div class="card card-service">
     <img class="card-bg-img" src="@@bgImgURL">
     <div class="card-body">
-        <div class="h3 fw-medium mb-1">@@title</div>
+        <div class="h3 fw-medium mb-1">
+            <a href="services-single.html" class="stretched-link">@@title</a>
+        </div>
         <div class="h5 fw-light text-black-60 mb-0">@@subtitle</div>
     </div>
 </div>
