--- a/src/scss/_bootstrap-custom.scss
+++ b/src/scss/_bootstrap-custom.scss
@@ -13,6 +13,7 @@ $primary: #4251F7;
 $secondary: #F74251;
 $white: #F8FEFF;
 $black: #100102;
+$success: #006311;
 
 // fonts
 $font-family-sans-serif: "Inter", sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
