--- a/src/scss/components/_variables.scss
+++ b/src/scss/components/_variables.scss
@@ -13,6 +13,7 @@
     // --theme-stroke-gray: #E4E4E5; // border color
     --theme-blue: #4251F7;
     --theme-blue-60: #858ef2;
+    --theme-blue-100: #DFEAFD;
     --theme-blue-light: #F0F7FF;
     --theme-blue-gradient: linear-gradient(180deg, #4251C3 0%, #7483F5 100%);
     --theme-red: #F74251;
@@ -22,6 +23,7 @@
     --theme-green: #006311;
     --theme-green-light: #C0FCD9;
     --theme-gray-gradient: linear-gradient(180deg, #BBC2CA 0%, #D9E0E8 100%);
+    --bs-success-bg-subtle: #DCFDD9;
 
     // Theme colors RGB
     --theme-white-rgb: 248, 254, 255;
