--- a/src/scss/components/_modals.scss
+++ b/src/scss/components/_modals.scss
@@ -151,7 +151,7 @@
 
 .offcanvas-mobilemenu {
     --bs-offcanvas-height: 95dvh;
-    top: 15px !important;
-    right: 15px !important;
-    left: 15px !important;
+    // top: 15px !important;
+    // right: 15px !important;
+    // left: 15px !important;
 }
